--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,6 +40,9 @@ li a {
 .wrapper {
   max-width: 95%;
   width: 100%;
+  padding-left: 16px;
+  padding-right: 16px;
+  box-sizing: border-box;
 }
 
 @media (min-width: 768px) {
